ci/kubernetes/non-root/wordpress.yml
# https://medium.com/@containerum/how-to-deploy-wordpress-and-mysql-on-kubernetes-bda9a3fdd2d5
# https://docs.microsoft.com/en-us/azure/security/fundamentals/encryption-overview
# kubectl patch pod/wordpress-fe-5fcbf7f649-nx79w -p '{"metadata":{"finalizers":null}}'
# find $1 -type f -exec stat --format '%Y :%y %n' "{}" \; | sort -nr | cut -d: -f2- | head

#############################################################################
# Wordpress
#############################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-fe
  labels:
    app: wordpress-fe
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend

        # Mandatory labels:
        # - May only contain [-a-zA-Z0-9_.]
        # - "@" should be exchanged by _AT_
        # - Spaces not allowed
        psp: 9999.P99999.999.99
        owner: tbd
        ownerinfo: tbd_AT_example.com
        codesource: tbd
        classification: low
        assetoperator: "TBD"
        assetuser: tbd
        softwareversion: "tbd"
        protectionresponsible: tbd
        protectionresponsibleinfo: tbd_AT_example.com
        riskfactor: low
    spec:
      securityContext:
        runAsUser: 1001
        fsGroup: 1001
      containers:
      # - image: bitnami/wordpress:5.5.3
      - image: jmaclean/wordpress-non-root-wordpress:5.5.3-1
        # imagePullPolicy: Always
        imagePullPolicy: IfNotPresent
        name: wordpress-fe
        # command: ['sh']
        # args:
        # - "-c"
        # - |
        #   sleep 5000
        # # RUN IN CONTAINER: /app-entrypoint.sh httpd -f /opt/bitnami/apache/conf/httpd.conf -DFOREGROUND
        # command: ['sh']
        # args:
        # - "-c"
        # - |
        #   cp -Rp /data/wordpress /bitnami/
        #   httpd -f /opt/bitnami/apache/conf/httpd.conf -DFOREGROUND
        # # cp -Rp /data/.nami/* /.nami/
        # # chmod -R 777 /.nami/*
        startupProbe:
          httpGet:
            path: /
            port: 8080
          failureThreshold: 300 # Wordpress takes a long time to initialize.
          periodSeconds: 10
        livenessProbe:
          # httpGet: null
          # tcpSocket: # To be used when webserver has a redirect
          #   port: 8080
          # ---
          httpGet:
            path: /
            port: 8080
          # ---
          # exec:
          #   command:
          #   - sh
          #   - -c
          #   - |
          #     EXIT_STATUS=1;
          #     ps -ef | grep wordpress-inputs.json | grep -v grep && EXIT_STATUS=$?;
          #     curl -s http://localhost:8080/ > /dev/null && EXIT_STATUS=$?;
          #     echo $EXIT_STATUS
          # ---
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          # httpGet: null
          # tcpSocket: # To be used when webserver has a redirect
          #   port: 8080
          # ---
          httpGet:
            path: /
            port: 8080
          # ---
          # exec:
          #   command:
          #   - sh
          #   - -c
          #   - |
          #     EXIT_STATUS=1;
          #     ps -ef | grep wordpress-inputs.json | grep -v grep && EXIT_STATUS=$?;
          #     curl -s http://localhost:8080/ > /dev/null && EXIT_STATUS=$?;
          #     echo $EXIT_STATUS
          # ---
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 10
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 1Gi
        ports:
        - containerPort: 8080
        - containerPort: 8443
        volumeMounts:
      #     - name: vol-tmp
      #       mountPath: /tmp
      #     # - name: vol-nami-registry
      #     #   mountPath: /.nami/registry.json
      #     #   subPath: registry.json
          - name: vol-bitnami-data
            mountPath: /bitnami
      volumes:
      #   - name: vol-tmp
      #     emptyDir: {}
      #   # - name: vol-nami-registry
      #   #   emptyDir: {}
      #   - name: vol-bitnami-data
      #     emptyDir: {}
        - name: vol-bitnami-data
          persistentVolumeClaim:
            claimName: wordpress-persistent-storage
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-fe
  labels:
    app: wordpress-fe
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: https
      port: 84
      protocol: TCP
      targetPort: 8443
  selector:
    app: wordpress
    tier: frontend

---
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: ingress-dev
#   annotations:
#     kubernetes.io/ingress.class: "azure/application-gateway"
#     appgw.ingress.kubernetes.io/appgw-ssl-certificate: "AzureCrossLogicConsulting"
#     appgw.ingress.kubernetes.io/ssl-redirect: "true"
# spec:
#   rules:
#   - host: "ingress-dev.azure.crosslogic-consulting.com"
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: wordpress-fe
#           servicePort: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dev
  annotations:
    kubernetes.io/ingress.class: "azure/application-gateway"
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: "AzureCrossLogicConsulting"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: "ingress-dev.azure.crosslogic-consulting.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-fe
            port:
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mariadb
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: mariadb

        # Mandatory labels:
        # - May only contain [-a-zA-Z0-9_.]
        # - "@" should be exchanged by _AT_
        # - Spaces not allowed
        psp: 9999.P99999.999.99
        owner: tbd
        ownerinfo: tbd_AT_example.com
        codesource: tbd
        classification: low
        assetoperator: "TBD"
        assetuser: tbd
        softwareversion: "tbd"
        protectionresponsible: tbd
        protectionresponsibleinfo: tbd_AT_example.com
        riskfactor: low
    spec:
      securityContext:
        runAsUser: 1001
        fsGroup: 1001
      containers:
      # - image: bitnami/mariadb:10.5.8
      - image: jmaclean/wordpress-non-root-mariadb:10.5.8-1
        # imagePullPolicy: Always
        imagePullPolicy: IfNotPresent
        name: mariadb
        # command: ['sh']
        # args:
        # - "-c"
        # - |
        #   sleep 5000
        # # RUN IN CONTAINER: /opt/bitnami/scripts/mariadb/entrypoint.sh /opt/bitnami/scripts/mariadb/run.sh
        # command: ['sh']
        # args:
        # - "-c"
        # - |
        #   cp -Rp /data/mariadb/data/* /bitnami/mariadb/data/
        #   /opt/bitnami/scripts/mariadb/run.sh
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          readOnlyRootFilesystem: true
        livenessProbe:
          exec:
            command: ["sh", "-c", "exec mysqladmin status -uroot -p$MARIADB_ROOT_PASSWORD"]
          initialDelaySeconds: 120
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          exec:
            command: ["sh", "-c", "exec mysqladmin status -uroot -p$MARIADB_ROOT_PASSWORD"]
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 1Gi
        ports:
        - containerPort: 3306
        volumeMounts:
          - name: mariadb-config
            mountPath: /opt/bitnami/mariadb/conf/my.cnf
            subPath: my.cnf
          - name: vol-tmp
            mountPath: /tmp
          - name: vol-bitnami-tmp
            mountPath: /opt/bitnami/mariadb/tmp
          - name: vol-bitnami-logs
            mountPath: /opt/bitnami/mariadb/logs
          - name: vol-bitnami-conf
            mountPath: /opt/bitnami/mariadb/conf
          - name: vol-bitnami-data
            mountPath: /bitnami/mariadb/data
      volumes:
        - name: mariadb-config
          configMap:
            defaultMode: 420
            name: mariadb-config
        - name: vol-tmp
          emptyDir: {}
        - name: vol-bitnami-logs
          emptyDir: {}
        - name: vol-bitnami-tmp
          emptyDir: {}
        - name: vol-bitnami-conf
          emptyDir: {}
        # - name: vol-bitnami-data
        #   emptyDir: {}
        - name: vol-bitnami-data
          persistentVolumeClaim:
            claimName: mariadb-persistent-storage

---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mariadb
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: mariadb
